CD-6059: Fixed about codescan image alignment

--- a/server/sonar-web/src/main/js/app/styles/init/base.css
+++ b/server/sonar-web/src/main/js/app/styles/init/base.css
@@ -28,9 +28,9 @@
   padding: 0;
 }
 
-*:focus-visible {
+/* *:focus-visible {
   outline: 2px dotted #297bae;
-}
+} */
 
 html,
 body {
